--- a/style.css
+++ b/style.css
@@ -182,6 +182,8 @@ footer {
 }
 .column p {
   text-align: left; /* Align text to the left */
+  font-size: 24px;
+  margin-left: 15px;
 }
 /* Carousel styles */
 .carousel-container {
